 * Added `WAGTAILADMIN_RECENT_EDITS_LIMIT` setting to to define the number of your most recent edits on the dashboard (Maarten Kling)
 * Creating / editing users through the Wagtail admin no longer modifies the `is_staff` flag (Matt Westcott)
 * Added link to the full Elasticsearch setup documentation from the Performance page (Matt Westcott)
 * Fix: Marked 'Date from' / 'Date to' strings in wagtailforms for translation (Vorlif)
 * Fix: "File" field label on image edit form is now translated (Stein Strindhaug)
 * Fix: Unreliable preview is now reliable by always opening in a new window (Kjartan Sverrisson)
 * Fix: Fixed placement of `{{ block.super }}` in `snippets/type_index.html` (LB (Ben Johnston))
 * Fix: Optimised database queries on group edit page (Ashia Zawaduk)
 * Fix: Choosing a popular search term for promoted search results now works correctly after pagination (Janneke Janssen)
 * Fix: IDs used in tabbed interfaces are now namespaced to avoid collisions with other page elements (Janneke Janssen)
 * Fix: Page title not displaying page name when moving a page (Trent Holliday)
 * Fix: The ModelAdmin module can now work without the wagtailimages and wagtaildocs apps installed (Andy Babic)
 * Fix: Cloudflare error handling now handles non-string error responses correctly (hdnpl)
 * Fix: Search indexing now uses a defined query ordering to prevent objects from being skipped (Christian Peters)
 * Fix: Ensure that number localisation is not applied to object IDs within admin templates (Tom Hendrikx)
 * Fix: Paginating with a search present was always returning the 1st page in Internet Explorer 10 & 11 (Ralph Jacobs)


1.9 (16.02.2017)
~~~~~~~~~~~~~~~~

 * Added support for comparing page revisions (Karl Hobley, Janneke Janssen, Matt Westcott)
 * Added support for many-to-many relations on page models (Thejaswi Puthraya, Matt Westcott)
 * Form builder form submissions can now be bulk-deleted (Karl Hobley)